arreglo del modulo uno y rutas del 3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,13 @@
     <a routerLink="/two/b2">two b2</a>
   </li>
   <li>
-    <a routerLink="/two">Home Two</a>
+    <a routerLink="/">Home Two</a>
   </li>
   <li>
-    <a routerLink="/three">three</a>
+    <a routerLink="/three/uno">Three uno</a>
+  </li>
+  <li>
+    <a routerLink="/three/dos">Three dos</a>
   </li>
 </ul>
 
